# Moodit

./: README.md
applications/backend/: Dockerfile  pyproject.toml  requirements.txt
applications/backend/src/: config.py  dependencies.py  main.py  schemes.py
applications/backend/src/auth/: oauth.py
applications/backend/src/database/: database.py  models.py
applications/backend/src/routes/: analytics.py  auth.py  moodlogs.py  schedules.py
applications/frontend/: dashboard.html  index.html  schedules.html  style.css
applications/frontend/calender/: app.js  calender.html
applications/frontend/scripts/: analytics.js  db.js  interactive.js  notifications.js  schedules.js  script.js  service-worker.js
applications/notifications/: index.html  main.js  service-worker.js
